--- a/backend/package.json
+++ b/backend/package.json
@@ -3,16 +3,19 @@
     "version": "1.0.0",
     "type": "module",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+        "start": "node server.js",
+        "dev": "nodemon server.js"
     },
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.3.1",
-      "express": "^4.18.2",
-      "mongoose": "^8.0.3"
+        "@google/generative-ai": "^0.24.0",
+        "cors": "^2.8.5",
+        "dotenv": "^16.3.1",
+        "express": "^4.18.2",
+        "mammoth": "^1.9.0",
+        "mongoose": "^8.0.3",
+        "pdf-parse": "^1.1.1"
     },
     "devDependencies": {
-      "nodemon": "^3.1.9"
+        "nodemon": "^3.1.9"
     }
-  }
+}
