--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,23 +5,27 @@
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
     "@supabase/supabase-js": "^2.49.1",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "cra-template-pwa": "2.0.0",
+    "crypto-browserify": "^3.12.1",
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
     "mongoose": "^8.13.0",
+    "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-webcam": "^7.2.0",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,6 +49,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.3",
+    "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.4.1"
   }
 }
