--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^2.3.0",
-    "@supabase/supabase-js": "^2.49.1",
+    "@supabase/supabase-js": "^2.49.4",
+    "axios": "^1.8.4",
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "cra-template-pwa": "2.0.0",
@@ -12,12 +13,15 @@
     "express": "^4.21.2",
     "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
+    "html-react-parser": "^5.2.3",
     "mongoose": "^8.13.0",
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-syntax-highlighter": "^15.6.1",
     "react-webcam": "^7.2.0",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^4.2.4"
